# gridpulse

./: .gitignore  Assignment2_Dashboard_Group156.ipynb  Assignment2_Group156.ipynb  LICENSE  Makefile  README.md  context.md  pyproject.toml  requirements-pipeline.txt  requirements.txt
.streamlit/: config.toml
dashboard/: app_streamlit.py
data/: au_power_stations.csv  market_price_demand_5min.csv  mqtt_continuous_state.json  mqtt_last_publish.json
data/raw_openelectricity/: batch_003__20260512_20260519.json  batch_006__20260512_20260519.json  batch_009__20260512_20260519.json  batch_012__20260512_20260519.json  batch_017__20260512_20260519.json  facilities.json  market_NEM_20260512_20260519.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _marts__models.yml  agg_diurnal_profile.sql  agg_fuel_mix_daily.sql  agg_region_intensity.sql  dim_facility.sql  fct_facility_interval.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_facilities.sql  stg_market.sql  stg_power_emissions.sql
dbt/tests/: assert_emissions_non_negative.sql  assert_intervals_within_window.sql
docs/: ARCHITECTURE.md  data_dictionary.md  make_architecture_diagram.py
gridpulse/: __init__.py  api_client.py  config.py  geocode.py  ingest.py  load.py  pipeline.py  quality.py  transform.py
orchestration/: __init__.py  assets.py  dbt_assets.py  definitions.py
report/: gridpulse.tex
tests/: test_quality_geocode.py  test_transform.py
